# ZPlayer

./: README.md  build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_setting.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
baselibrary/: build.gradle
baselibrary/src/main/: AndroidManifest.xml
baselibrary/src/main/res/values/: styles.xml
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/debug/: AndroidManifest.xml
demo/src/main/res/layout/: activity_demo.xml  activity_demo2.xml  content_demo2.xml
demo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
shoot/: build.gradle
shoot/src/main/: AndroidManifest.xml
shoot/src/main/debug/: AndroidManifest.xml
shoot/src/main/res/layout/: activity_shoot.xml
shoot/src/main/res/values/: strings.xml
video/: CMakeLists.txt  build.gradle
video/src/androidTest/java/com/zqb/video/: ExampleInstrumentedTest.kt
video/src/main/: AndroidManifest.xml
video/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  ZFFmpeg.cpp  ZFFmpeg.h  macro.h  native-lib.cpp  safe_queue.h
video/src/main/debug/: AndroidManifest.xml
video/src/main/java/com/zqb/video/: VideoActivity.kt  VideoApplication.kt  ZPlayer.kt
video/src/main/res/layout/: activity_video.xml
video/src/test/java/com/zqb/video/: ExampleUnitTest.kt
(+134 files in other folders)
